# CBXShell-rs

./: .gitignore  AppxManifest.xml  CHANGELOG.md  Cargo.toml  README.md  act-tag-push-v5.1.2.json  build_chocolatey.ps1  build_msix.ps1  build_msix_bundle.ps1  build_nsis.ps1  build_nsis_snapshot.ps1  dev_shell_extension.ps1  installer.nsi
.github/workflows/: docs.yml  windows-ci.yml  windows-release.yml
CBXShell/: Cargo.toml
CBXShell/src/: lib.rs  registry.rs
CBXShell/src/archive/: config.rs  mod.rs  rar.rs  sevenz.rs  stream_reader.rs  utils.rs  zip.rs
CBXShell/src/com/: cbxshell.rs  class_factory.rs  mod.rs
CBXShell/src/image_processor/: decoder.rs  hbitmap.rs  magic.rs  mod.rs  resizer.rs  thumbnail.rs
CBXShell/src/manager/: main.rs  registry_ops.rs  state.rs  ui.rs  utils.rs
CBXShell/src/utils/: debug_log.rs  error.rs  file.rs  mod.rs
CBXShell/tests/: test_webp_decode.rs
chocolatey/: cbxshell-rs.nuspec
chocolatey/tools/: chocolateyinstall.ps1  chocolateyuninstall.ps1
docs/: astro.config.mjs  package.json  pnpm-lock.yaml
docs/.astro/: content-modules.mjs  data-store.json  settings.json
docs/public/: llms-full.txt  llms.txt  robots.txt
docs/src/content/: config.ts
docs/src/content/docs/: architecture.mdx  build.mdx  faq.mdx  index.mdx  installation.mdx  logging.mdx  manager.mdx  overview.mdx  packaging.mdx  roadmap.mdx  structure.mdx
docs/src/content/docs/ko/: architecture.mdx  build.mdx  faq.mdx  index.mdx  installation.mdx  logging.mdx  manager.mdx  overview.mdx  packaging.mdx  roadmap.mdx  structure.mdx
docs/src/styles/: custom.css
