[package]
name = "cbxshell"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Windows Shell Extension for ZIP/RAR/7z comic book archive thumbnails with WebP support"

[lib]
crate-type = ["cdylib", "rlib"]
name = "cbxshell"

[[bin]]
name = "cbxmanager"
path = "src/manager/main.rs"

[dependencies]
windows.workspace = true
windows-core.workspace = true
zip.workspace = true
unrar.workspace = true
sevenz-rust.workspace = true
image.workspace = true
fast_image_resize.workspace = true
natord.workspace = true
winreg.workspace = true
widestring.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# GUI framework (for manager binary)
native-windows-gui.workspace = true
native-windows-derive.workspace = true

# Additional dependencies
once_cell = "1.19"

[build-dependencies]
embed-resource = "2.4"
winres = "0.1"

[dev-dependencies]
tempfile = "3.8"

[features]
default = []
e2e-windows = []
